_includes/manuals/1.4/3.1.1_supported_platforms.md
The following operating systems are supported by the installer, have packages and are tested for deploying Foreman:

* Red Hat Enterprise Linux 6 and derivatives (CentOS, Scientific Linux)
  * [EPEL](http://fedoraproject.org/wiki/EPEL) is required
  * On RHEL 6, additionally the Optional and RHSCL 1.0 repositories/channels:
    * `yum-config-manager --enable rhel-6-server-optional-rpms rhel-server-rhscl-6-rpms`
* Fedora 19
* Debian 7 (Wheezy)
* Debian 6 (Squeeze)
  * Ensure Puppet is updated from backports
* Ubuntu 12.04 (Precise)

All platforms will require Puppet 2.7 or higher.  Puppet 3.x is supported and may be installed from the Puppet Labs repositories.

Other operating systems will need to use alternative installation methods, such as from source.

The following operating systems are known to install successfully from Foreman:

* RHEL derivatives (CentOS) 3+
* Fedora
* Ubuntu
* Debian
* Solaris 8, 10
* OpenSUSE 11.4
